force-app/main/default/objects/Identity_Document__c/Identity_Document__c.object-meta.xml
<CustomObject>
    <label>Identity Document</label>
    <nameField>
        <displayFormat>ID - {00000}</displayFormat>
        <label>Identity Document  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identity Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>