force-app/main/default/objects/Identity_Document__c/fields/Date_Checked__c.field-meta.xml
<CustomField>
    <fullName>Date_Checked__c</fullName>
    <description>What Date the ID Check performed</description>
    <inlineHelpText>What Date the ID Check performed</inlineHelpText>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>