force-app/main/default/objects/Identity_Document__c/fields/ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>ID_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Checked</label>
    <type>Checkbox</type>
</CustomField>