force-app/main/default/objects/Identity_Document__c/fields/ID_Documnet_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Documnet_Type__c</fullName>
    <label>ID Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver Licence</fullName>
                <default>true</default>
                <label>Driver Licence</label>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Photo Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>