force-app/main/default/objects/Identity_Document__c/fields/Patient_or_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_or_Donor__c</fullName>
    <label>Patient or Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Identity Documents</relationshipLabel>
    <relationshipName>Identity_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>