force-app/main/default/objects/Identity_Document__c/fields/Staff_Member_who_Performed_Check__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_who_Performed_Check__c</fullName>
    <label>Staff Member who Performed Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>